Fix because last css fixes add made the video in spe=1 too big

--- a/src/styles.css
+++ b/src/styles.css
@@ -81,12 +81,7 @@ div#cont-ObjView > #vid-name {
 	font-weight: bold;
 	font-size: 1vw;
 }
-/*
-video {
-	max-width: 320px;
-	max-height: 320px;
-}
-*/
+
 div#cont-ObjView > video {
   margin: 0;
   position: absolute;
